--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
+    "expo-barcode-scanner": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-web-browser": "^7.0.0",
@@ -24,6 +25,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-simple-dialogs": "^1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0"
   },
