--- a/app.json
+++ b/app.json
@@ -1,32 +1,35 @@
 {
-  "expo": {
-    "name": "MH Reward Me",
-    "slug": "rewardMe",
-    "privacy": "public",
-    "sdkVersion": "35.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "description": "",
-    "githubUrl": "https://github.com/wahaj-47/rewardMe"
-  }
+	"expo": {
+		"name": "MH Reward Me",
+		"slug": "rewardMe",
+		"privacy": "public",
+		"sdkVersion": "35.0.0",
+		"platforms": ["ios", "android"],
+		"version": "1.0.2",
+		"orientation": "portrait",
+		"icon": "./assets/images/icon.png",
+		"splash": {
+			"image": "./assets/images/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#000000"
+		},
+		"notification": {
+			"icon": "./assets/images/icon.png"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 30000
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"bundleIdentifier": "com.mercedeshairdressing.rewardme",
+			"icon": "./assets/images/Icon-Store.png"
+		},
+		"android": {
+			"package": "com.mercedeshairdressing.rewardme",
+			"permissions": ["CAMERA", "VIBRATE"],
+			"googleServicesFile": "./google-services.json"
+		},
+		"description": "",
+		"githubUrl": "https://github.com/wahaj-47/rewardMe"
+	}
 }
