--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 		"privacy": "public",
 		"sdkVersion": "35.0.0",
 		"platforms": ["ios", "android"],
-		"version": "1.0.2",
+		"version": "2.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/icon.png",
 		"splash": {
@@ -14,17 +14,24 @@
 			"backgroundColor": "#000000"
 		},
 		"notification": {
-			"icon": "./assets/images/icon.png"
+			"icon": "./assets/images/iconAndroid.png"
 		},
 		"updates": {
-			"fallbackToCacheTimeout": 30000
+			"fallbackToCacheTimeout": 0
 		},
+		"primaryColor": "#61DEFF",
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
+			"buildNumber": "1",
+			"infoPlist": {
+				"NSCameraUsageDescription": "This app uses the camera to scan qrcodes for providing discounts."
+			},
 			"bundleIdentifier": "com.mercedeshairdressing.rewardme",
 			"icon": "./assets/images/Icon-Store.png"
 		},
 		"android": {
+			"versionCode": 3,
+			"icon": "./assets/images/Icon-Store.png",
 			"package": "com.mercedeshairdressing.rewardme",
 			"permissions": ["CAMERA", "VIBRATE"],
 			"googleServicesFile": "./google-services.json"
